[package]
name = "test-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-std = "1.12"
awc = "3"
base64 = "0.13"
clap = {version = "3", features = ["derive"]}
futures = "0.3"
indicatif = "0.16"
nalgebra = "0.31"
statrs = "0.15"